--- a/index.html
+++ b/index.html
@@ -6,38 +6,51 @@
     <title>Larumbe Dynamics LLC</title>
     <style>
         body {
-            background-color: #f4f4f4;
             font-family: 'Arial', sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-
-        h1 {
-            font-size: 3em;
-            color: #333;
-            letter-spacing: 2px;
-            margin-bottom: 20px;
-        }
-
-        .container {
-            display: inline-block;
             background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-
-        .description {
-            font-size: 1.2em;
+        h1 {
+            font-size: 4em;
+            font-weight: bold;
+            letter-spacing: 2px;
+            margin: 0;
+            text-align: center;
+            color: #0e1d26; /* Dark blue-gray */
+        }
+        h2 {
+            font-size: 2.7em;
+            margin: 5px;
+            text-align: center;
+            letter-spacing: 1px;
+            font-weight: normal;
+            color: #0e1d26; /* Dark blue-gray */
+        }
+        .container {
+            text-align: center;
+            background: #cfd8d9; /*#b7c0c2;*/
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 10px 20px rgba(0,0,0,0.1);
+        }      
+	.description {
+            font-size: 1.7em;
             color: #666;
             margin-top: 10px;
-        }
+	    margin-bottom: 0px;
+	}
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Larumbe Dynamics LLC</h1>
-        <p class="description">By Federico Larumbe</p>
+      <h1>LARUMBE</h1>
+      <h2>DYNAMICS LLC</h2>
+      <br>
+      <p class="description">By Federico Larumbe</p>
     </div>
 </body>
 </html>
