--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             margin-top: 10px;
 	    margin-bottom: 0px;
 	}
+	.email {
+            font-size: 0.9em;
+            color: #666;
+            margin-top: 30px;
+	    margin-bottom: 0px;
+	    font-style: italic;
+	}
     </style>
 </head>
 <body>
@@ -51,6 +58,7 @@
       <h2>DYNAMICS LLC</h2>
       <br>
       <p class="description">By Federico Larumbe</p>
+      <p class="email">federico at &lt;this domain&gt; | North Hollywood, California</p>
     </div>
 </body>
 </html>
