Fix vertical scroll

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+	    min-height: 100vh;  /* Ensure it takes the full viewport height */
+	    height: 100dvh;     /* Use dynamic viewport height on supported browsers */
             margin: 0;
         }
         h1 {
