--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
 	    margin-bottom: 0px;
 	    font-style: italic;
 	}
+	.contact-info {
+            font-size: 0.9em;
+            color: #666;
+            margin-top: 30px;
+	    margin-bottom: 0px;
+	    font-style: italic;
+            text-align: right;
+	}
     </style>
 </head>
 <body>
@@ -59,7 +67,9 @@
       <h2>DYNAMICS LLC</h2>
       <br>
       <p class="description">By Federico Larumbe</p>
-      <p class="email">federico at &lt;this domain&gt; | North Hollywood, California</p>
+      <!-- <p class="email">federico at &lt;this domain&gt; | North Hollywood, California</p> -->
+      <p class="contact-info">federico at &lt;this domain&gt;<br>
+	North Hollywood, California</p>
     </div>
 </body>
 </html>
