--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
             margin-top: 30px;
 	    margin-bottom: 0px;
 	    font-style: italic;
-            text-align: right;
 	}
     </style>
 </head>
@@ -67,9 +66,9 @@
       <h2>DYNAMICS LLC</h2>
       <br>
       <p class="description">By Federico Larumbe</p>
-      <!-- <p class="email">federico at &lt;this domain&gt; | North Hollywood, California</p> -->
-      <p class="contact-info">federico at &lt;this domain&gt;<br>
-	North Hollywood, California</p>
+      <p class="email">federico at &lt;this domain&gt; | North Hollywood, California</p>
+      <!-- <p class="contact-info">federico at &lt;this domain&gt;<br> -->
+      <!-- 	North Hollywood, California</p> -->
     </div>
 </body>
 </html>
