Contact info, tuning

--- a/index.html
+++ b/index.html
@@ -44,13 +44,6 @@
             margin-top: 10px;
 	    margin-bottom: 0px;
 	}
-	.email {
-            font-size: 0.9em;
-            color: #666;
-            margin-top: 30px;
-	    margin-bottom: 0px;
-	    font-style: italic;
-	}
 	.contact-info {
             font-size: 0.9em;
             color: #666;
@@ -66,9 +59,7 @@
       <h2>DYNAMICS LLC</h2>
       <br>
       <p class="description">By Federico Larumbe</p>
-      <p class="email">federico at &lt;this domain&gt; | North Hollywood, California</p>
-      <!-- <p class="contact-info">federico at &lt;this domain&gt;<br> -->
-      <!-- 	North Hollywood, California</p> -->
+      <p class="contact-info">federico at &lt;this domain&gt; | North Hollywood | California</p>
     </div>
 </body>
 </html>
