Contact info, card-contact@ email

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <h2>DYNAMICS LLC</h2>
       <br>
       <p class="description">By Federico Larumbe</p>
-      <p class="contact-info">federico at &lt;this domain&gt; | SF Bay Area | California</p>
+      <p class="contact-info">card-contact at &lt;this domain&gt; | SF Bay Area | California</p>
     </div>
 </body>
 </html>
