--- a/painta/contact.html
+++ b/painta/contact.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paintatronics™</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Paintatronics™</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/App_Icon.png" type="image/png">
 </head>
 <body>
 
