Painta, top bar navigation

--- a/painta/faq.html
+++ b/painta/faq.html
@@ -13,14 +13,12 @@
     
     <!-- Top Bar -->
     <div class="top-bar">
-      <div class="menu-icon">≡</div>
+      <p><a href="index.html">Paintatronics™</a> | <a href="faq.html">FAQ</a> | <a href="contact.html">Contact</a></p>
     </div>
 
     <!-- Content -->
     <div class="content">
       <h1>Frequently Asked Questions</h1>
-      <!-- Links for Description, FAQ, Contact -->
-      <p><a href="index.html">Description</a> | <a href="faq.html">FAQ</a> | <a href="contact.html">Contact</a></p>
 
       <section class="faq-section">
         <h2>General</h2>
@@ -66,14 +64,11 @@
           <p>Yes, Paintatronics is designed to be playable offline. Some features may require an internet connection, like game updates, but puzzles are available anytime.</p>
         </div>
       </section>
-      
-      <!-- Links for Description, FAQ, Contact -->
-      <p><a href="index.html">Description</a> | <a href="faq.html">FAQ</a> | <a href="contact.html">Contact</a></p>
     </div>
 
     <!-- Bottom Bar -->
     <div class="bottom-bar">
-        Developed by&nbsp;<a href="https://larumbedynamics.com" target="_blank">Larumbe Dynamics, LLC</a>
+      Developed by&nbsp;<a href="https://larumbedynamics.com" target="_blank">Larumbe Dynamics, LLC</a>
     </div>
   </div>
 
