--- a/painta/contact.html
+++ b/painta/contact.html
@@ -13,27 +13,24 @@
     
     <!-- Top Bar -->
     <div class="top-bar">
-        <div class="menu-icon">≡</div>
+      <p><a href="index.html">Paintatronics™</a> | <a href="faq.html">FAQ</a> | <a href="contact.html">Contact</a></p>
     </div>
 
     <!-- Content -->
     <div class="content">
-        <h1>Paintatronics™</h1>
-        <p class="description">
-            We’d love to hear from you! Whether you have questions, feedback, or need help with the game, please don’t hesitate to reach out. Our team is here to make sure you have the best experience with Paintatronics.
-        </p>
+      <h1>Contact</h1>
+      <p class="description">
+        We’d love to hear from you! Whether you have questions, feedback, or need help with the game, please don’t hesitate to reach out. Our team is here to make sure you have the best experience with Paintatronics.
+      </p>
 
-        <p class="description">
-📧 Email us at: <a href="mailto:painta-support@larumbedynamics.com">painta-support@larumbedynamics.com</a>
-        </p>
-        
-        <!-- Links for Description, FAQ, Contact -->
-        <p><a href="index.html">Description</a> | <a href="faq.html">FAQ</a> | <a href="contact.html">Contact</a></p>
+      <p class="description">
+	📧 Email us at: <a href="mailto:painta-support@larumbedynamics.com">painta-support@larumbedynamics.com</a>
+      </p>
     </div>
 
     <!-- Bottom Bar -->
     <div class="bottom-bar">
-        Developed by&nbsp;<a href="https://larumbedynamics.com" target="_blank">Larumbe Dynamics, LLC</a>
+      Developed by&nbsp;<a href="https://larumbedynamics.com" target="_blank">Larumbe Dynamics, LLC</a>
     </div>
   </div>
 
