Painta, privacy tuning

--- a/painta/contact.html
+++ b/painta/contact.html
@@ -24,7 +24,7 @@
       </p>
 
       <p class="description">
-	📧 Email us at: <a href="mailto:painta-support@larumbedynamics.com">painta-support@larumbedynamics.com</a>
+	📧 Email us at: <span style="white-space: nowrap;"><a href="mailto:painta-support@larumbedynamics.com" target="_blank">painta-support@larumbedynamics.com</a></span>
       </p>
     </div>
 
