--- a/painta/faq.html
+++ b/painta/faq.html
@@ -33,10 +33,10 @@
       </section>
 
       <section class="faq-section">
-        <h2>Account and Data Privacy</h2>
+        <h2>Data Privacy</h2>
         <div class="faq-question">
           <p><strong>Does Paintatronics collect personal data?</strong></p>
-          <p>Paintatronics only collects minimal, anonymous data, such as gameplay progress, to enhance the game experience. No personally identifiable information (PII) is collected, and all data is aggregated and anonymized through Firebase Analytics to help us improve the game.</p>
+          <p>No Personally Identifiable Information (PII) such as full name, email addresses, phone numbers, or precise locations is collected. Paintatronics only collects minimal, anonymous data, such as gameplay progress, to enhance the game experience. All data is aggregated and anonymized through Firebase Analytics to help us improve the game.</p>
         </div>
         <div class="faq-question">
           <p><strong>How is my gameplay data used?</strong></p>
@@ -57,7 +57,7 @@
         </div>
         <div class="faq-question">
           <p><strong>I'm experiencing a bug in the game. How can I report it?</strong></p>
-          <p>Sorry to hear that! You can report any bugs or issues through the in-game by emailing <span style="white-space: nowrap;"><a hreft="mailto:painta-support@larumbedynamics.com">painta-support@larumbedynamics.com</a></span>. Providing screenshots or steps to reproduce the issue helps us address it faster.</p>
+          <p>Sorry to hear that! You can report any bugs or issues through the in-game by emailing <span style="white-space: nowrap;"><a href="mailto:painta-support@larumbedynamics.com" target="_blank">painta-support@larumbedynamics.com</a></span>. Providing screenshots or steps to reproduce the issue helps us address it faster.</p>
         </div>
         <div class="faq-question">
           <p><strong>Can I play Paintatronics offline?</strong></p>
