Home page, softer green

--- a/redesign_green/index.html
+++ b/redesign_green/index.html
@@ -24,9 +24,9 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h2>Innovative Solutions in Education and Technology</h2>
-            <p>Building tools and experiences to inspire creativity and learning.</p>
-            <a href="#about" class="cta-button">Learn More</a>
+          <h2>Empowering Education with Technology</h2>
+          <p>Building tools and experiences to inspire creativity and learning.</p>
+          <a href="#about" class="cta-button">Explore our projects</a>
         </div>
     </section>
 
@@ -35,7 +35,7 @@
         <div class="container">
             <h2>About Us</h2>
             <p>Larumbe Dynamics, LLC is dedicated to crafting digital solutions that bridge technology and education. Our mission is to create meaningful and engaging experiences that encourage creativity, critical thinking, and lifelong learning.</p>
-            <a href="#projects" class="cta-link">Explore Our Projects</a>
+            <a href="#projects" class="cta-link">Learn more</a>
         </div>
     </section>
 
