Home page, hero phrase

--- a/redesign_green/index.html
+++ b/redesign_green/index.html
@@ -24,8 +24,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-          <h2>Empowering Education with Technology</h2>
-          <p>Building tools and experiences to inspire creativity and learning.</p>
+          <h2>Advancing Education with Technology</h2>
+          <p>Creating tools that empower learners, spark creativity, and drive educational growth.</p>
           <a href="#about" class="cta-button">Explore our projects</a>
         </div>
     </section>
