--- a/redesign_green/contact.html
+++ b/redesign_green/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Larumbe Dynamics, LLC</title>
+    <title>Contact Us - Larumbe Dynamics, LLC</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,21 +20,18 @@
       </div>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-      <div class="hero-content">
-        <h2>Advancing Education with Technology</h2>
-        <p>Creating tools that empower learners, spark creativity, and drive educational growth.</p>
-        <a href="projects.html" class="cta-button">Explore our projects</a>
+    <!-- Contact Sections -->
+    <section class="contact-hero">
+      <div class="container">
+        <h2>Contact Us</h2>
+        <p>If you have any questions, feedback, or partnership ideas, please reach out to us through the contact information provided.</p>
       </div>
     </section>
-
-    <!-- About Section -->
-    <section class="about" id="about">
+    <section class="contact">
       <div class="container">
-        <h2>About Us</h2>
-        <p>Larumbe Dynamics, LLC is dedicated to crafting digital solutions that bridge technology and education. Our mission is to create meaningful and engaging experiences that encourage creativity, critical thinking, and lifelong learning.</p>
-        <a href="projects.html" class="cta-link">Learn more</a>
+        <!-- Email Contact -->
+        <p>Email: <a href="mailto:support@larumbedynamics.com">support@larumbedynamics.com</a></p>
+	<p>Location: San Francisco Bay Area, California</p>
       </div>
     </section>
 
