--- a/redesign_green/index.html
+++ b/redesign_green/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Larumbe Dynamics, LLC</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/LD_Logo.png" type="image/png">
 </head>
 <body>
   <div class="body-container">
