LD, Expand Panta's explanation

--- a/redesign_green/projects.html
+++ b/redesign_green/projects.html
@@ -37,7 +37,7 @@
 	      <td><a href="https://paintatronics.com" target="_blank" class="cta-link"><img src="images/paintatronics_icon.png" alt="Paintatronics Icon" class="project-icon"></a></td>
               <td>
 		<h3><a href="https://paintatronics.com" target="_blank" class="cta-link">Paintatronics™</a></h3>
-		<p>A pixel art puzzle game where creativity meets challenge. Engage in solving intricate puzzles and revealing vibrant images.</p>
+		<p>A pixel art puzzle game where creativity meets challenge. Solve intricate puzzles to reveal vibrant images and uncover fascinating fun facts about dinosaurs, animals, food, and more. Explore and learn while you play!</p>
 		<a href="https://paintatronics.com" target="_blank" class="cta-link">Learn More</a>
 	      </td>
 	    </tr>
